--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,21 @@ h1 {
 }
 
 #nav-bar {
-    background-color: antiquewhite;
+    background-color: rgb(32, 32, 32);
+    background-blend-mode: lighten;
 }
 
 .nav-title {
+    color: azure;
     font-weight: bold;
+}
+
+.navbar-nav {
+    height: 50px;
+}
+
+.nav-link {
+    color: azure;
 }
 
 .container {
@@ -29,11 +39,18 @@ h1 {
 }
 
 .content-box {
-    background-color: bisque;
+    background-color: #202020;
     background-blend-mode: lighten;
 }
 
-.image-box {}
+.content-box-text {
+    color: azure;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.image-box {
+    size: auto;
+}
 
 .navbar-brand {
     font-size: 2em;
