--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,141 @@
-* {
+html {
     box-sizing: border-box;
+    background: #eeeeee;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    font-weight: 200;
 }
 
 body {
-    background-image: url("/images/wood-board-background-2.jpg");
-    background-size: 100%;
+    margin: 0;
+}
+
+*,
+*:before,
+*::after {
+    box-sizing: inherit;
+}
+
+.site-wrap {
+    max-width: 700px;
+    margin: 70px auto;
+    background: white;
+    padding: 40px;
+    text-align: justify;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, .5);
+    transform: scale(0.98);
+    transition: transform 0.5s;
+}
+
+header {
+    text-align: center;
+    height: 50vh;
+    background: url(https://images.unsplash.com/photo-1514939775307-d44e7f10cabd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80) bottom center no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 h1 {
-    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    font-size: 4vw;
+    text-shadow: 3px 4px 0 rgba(0, 0, 0, 0.2);
 }
 
-#main-content {
+h2 {
+    display: inline-block;
+    text-align: center;
+    color: white;
+    font-size: 2vw;
+    text-shadow: 3px 4px 0 rgba(0, 0, 0, 0.2);
+}
+
+h3 {
+    font-size: 2vw;
+    text-align: left;
+    font-weight: bold;
+}
+
+p {
+    font-size: 1.5vw;
+    text-align: left;
+}
+
+nav {
+    background-color: black;
+    top: 0;
+    width: 100%;
+    transition: all 0.5s;
+    position: relative;
+    z-index: 1;
+}
+
+body.fixed-nav nav {
+    position: fixed;
+    box-shadow: 0 5px 0 rgba(0, 0, 0, 0.1);
+}
+
+nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+}
+
+nav li {
+    flex: 1;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+li.home {
+    max-width: 0;
+    overflow: hidden;
+    background: white;
+    transition: all 0.5s;
+    font-weight: 600;
+    font-size: 30px;
+}
+
+li.home a {
+    color: black;
+}
+
+.fixed-nav li.home {
+    max-width: 500px;
+}
+
+nav a {
+    text-decoration: none;
+    padding: 20px;
+    display: inline-block;
+    color: white;
+    transition: all 0.2;
+    text-transform: uppercase;
+}
+
+#self-portrait {
+    display: flex;
+    size: auto;
+    width: 50%;
+    height: 50%;
+}
+
+
+/* #main-content {
     position: relative;
 }
 
 #nav-bar-style {
     background-color: rgb(32, 32, 32);
     background-blend-mode: lighten;
-}
+} */
 
-.nav-bar-text {
+
+/* .nav-bar-text {
     color: azure;
 }
 
@@ -34,22 +149,26 @@ h1 {
 
 .nav-link {
     color: azure;
-}
+} */
 
-.container {
+
+/* .container {
     border: none;
     margin-left: auto;
     margin-top: 10px;
     margin-right: auto;
     margin-bottom: 10px;
     padding: 10px;
-}
+} */
 
-.content-box {
+
+/* .content-box {
     background-color: #202020;
     background-blend-mode: lighten;
-}
+} */
 
+
+/* 
 .content-box-text {
     color: azure;
     font-family: Arial, Helvetica, sans-serif;
@@ -62,4 +181,4 @@ h1 {
 .navbar-brand {
     font-size: 2em;
     border: 0px 0px 10px 10px;
-}
+} */
