--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,9 @@ body {
 }
 
 .site-wrap {
-    max-width: 700px;
+    display: flex;
+    flex: 1;
+    flex-wrap: wrap;
     margin: 70px auto;
     background: white;
     padding: 40px;
@@ -30,8 +32,9 @@ body {
 header {
     text-align: center;
     height: 50vh;
+    margin: 5px auto;
     background: url(https://images.unsplash.com/photo-1514939775307-d44e7f10cabd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80) bottom center no-repeat;
-    background-size: cover;
+    background-size: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -39,7 +42,7 @@ header {
 
 h1 {
     color: white;
-    font-size: 4vw;
+    font-size: 3em;
     text-shadow: 3px 4px 0 rgba(0, 0, 0, 0.2);
 }
 
@@ -47,19 +50,45 @@ h2 {
     display: inline-block;
     text-align: center;
     color: white;
-    font-size: 2vw;
+    font-size: 1em;
     text-shadow: 3px 4px 0 rgba(0, 0, 0, 0.2);
 }
 
 h3 {
-    font-size: 2vw;
+    margin: 10px;
+    font-size: 1.25em;
     text-align: left;
     font-weight: bold;
 }
 
+h3.school-degree {
+    font-size: 1em;
+}
+
+h3.graduating-year {
+    font-size: 1em;
+    color: rgba(1, 1, 1, 0.2));
+}
+
+h3 a {
+    color: black;
+}
+
+.container {
+    display: flex;
+}
+
+.text-content-box {
+    display: flex;
+    flex: 2;
+    flex-direction: column;
+}
+
 p {
-    font-size: 1.5vw;
+    display: flex;
+    font-size: .75em;
     text-align: left;
+    margin: .75em;
 }
 
 nav {
@@ -117,11 +146,21 @@ nav a {
     text-transform: uppercase;
 }
 
-#self-portrait {
+.image-box {
     display: flex;
-    size: auto;
-    width: 50%;
-    height: 50%;
+    align-items: flex-end;
+    justify-content: left;
+}
+
+.edu-catalog-img {
+    margin: 10px auto;
+    height: 1em%;
+    width: 100%;
+}
+
+#self-portrait {
+    margin: 50px auto;
+    height: 25vw;
 }
 
 
