Added content to Education and Career page, continued formatting pages to improve responsiveness

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ header {
     text-align: center;
     height: 50vh;
     margin: 5px auto;
-    background: url(https://images.unsplash.com/photo-1514939775307-d44e7f10cabd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80) bottom center no-repeat;
+    background: url(https://live.staticflickr.com/65535/50613582413_8e04c15b0a_k.jpg) center center no-repeat;
     background-size: auto;
     display: flex;
     align-items: center;
