--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,13 @@ body {
     transition: transform 0.5s;
 }
 
+.box-wrap {
+    margin: 70px auto;
+    background: white;
+    padding: 40px;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, .5);
+}
+
 header {
     text-align: center;
     height: 50vh;
