--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ h3.primary {
 
 h3.secondary {
     font-size: 1em;
-    color: rgba(1, 1, 1, 0.2));
+    color: rgba(1, 1, 1, 0.2);
 }
 
 h3 a {
@@ -120,7 +120,7 @@ nav {
 
 body.fixed-nav nav {
     position: fixed;
-    box-shadow: 0 5px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0px 0 rgba(0, 0, 0, 0.1);
 }
 
 nav ul {
@@ -164,15 +164,9 @@ nav a {
     text-transform: uppercase;
 }
 
-.image-box {
-    display: flex;
-    align-items: flex-end;
-    /* justify-content: left; */
-}
-
 .edu-catalog-img {
     margin: 10px auto;
-    height: auto%;
+    height: auto;
     width: 100%;
 }
 
@@ -180,62 +174,3 @@ nav a {
     margin: 50px auto;
     height: 25vw;
 }
-
-
-/* #main-content {
-    position: relative;
-}
-
-#nav-bar-style {
-    background-color: rgb(32, 32, 32);
-    background-blend-mode: lighten;
-} */
-
-
-/* .nav-bar-text {
-    color: azure;
-}
-
-.nav-title {
-    font-weight: bold;
-}
-
-.navbar-nav {
-    height: 50px;
-}
-
-.nav-link {
-    color: azure;
-} */
-
-
-/* .container {
-    border: none;
-    margin-left: auto;
-    margin-top: 10px;
-    margin-right: auto;
-    margin-bottom: 10px;
-    padding: 10px;
-} */
-
-
-/* .content-box {
-    background-color: #202020;
-    background-blend-mode: lighten;
-} */
-
-
-/* 
-.content-box-text {
-    color: azure;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.image-box {
-    size: auto;
-}
-
-.navbar-brand {
-    font-size: 2em;
-    border: 0px 0px 10px 10px;
-} */
